# DeliveryPlus

./: .env.dist  .ergo  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.ebcli  Dockerfile.node  Dockerfile.python  ERGO_SETUP.md  Makefile  NGINX_ROUTING.md  README.md  build-react.sh  docker-compose.deploy.yml  docker-compose.yml  nginx.conf  nginx.conf.current  nginx.conf.production  pyproject.toml  update-react-template.sh
apps/: entrypoint.sh
apps/api/: management_views.py  serializers.py  urls.py  views.py
apps/common/: api.py  api_clients.py  api_types.py  enums.py  functions.py  models.py  types.py
apps/config/: asgi.py  common.py  settings.py  urls.py  views.py  wsgi.py
apps/config/middleware/: tracking_payload.py
apps/config/templates/admin/: select2_filter.html
apps/config/templates/config/: 403.html  base.html  base_modal.html  index.html
apps/config/templates/react/: index.html  index.html.backup
apps/delivery/: admin.py  forms.py  models.py  urls.py  views.py
apps/delivery/migrations/: 0001_initial.py  0002_remove_trackingdata_time_zone.py  0003_agent_city_agent_country_agent_state_and_more.py  0004_agent_notifications.py
apps/delivery/templates/: 403.html  index.html
apps/delivery/templates/delivery/: agent_form.html  agent_list.html  edit_company.html  login.html
apps/mgmt/: admin.py  forms.py  models.py  urls.py  views.py
apps/mgmt/management/commands/: __init__.py  create_test_agent.py  store_build_files.py  wait_for_db.py
apps/mgmt/migrations/: 0001_initial.py
apps/mgmt/stubs/: subadmin.pyi
apps/mgmt/templates/mgmt/: agent_form.html  agent_list.html  dashboard.html  edit_company.html  login.html
apps/tracking/: admin.py  api.py  common.py  filters.py  forms.py  models.py  urls.py  views.py
apps/tracking/api/: api.py  functions.py  types.py  urls.py
apps/tracking/migrations/: 0001_initial.py  0002_agent_tags.py  0002_alter_agent_options_alter_campaign_options_and_more.py  0002_imagerequestdata_imagedata_delete_exifdata_and_more.py  0002_interceptiondata_notificationdata.py  0002_remove_tracking_token_token.py  0002_remove_trackingdata_ip_address_and_more.py  0003_add_token_to_tracking_data.py  0003_trackingdata_form_data.py  0004_campaign_browser_precedence_campaign_ip_precedence_and_more.py  0005_auto_20250509_0550.py  0005_trackingdata_ip_address_trackingdata_ip_source.py  0006_trackingdata_user_agent_and_more.py  0007_trackingdata_locale_trackingdata_locale_source.py  0008_trackingdata_client_time_and_more.py  0009_remove_trackingdata_time_source_and_more.py  0010_remove_trackingdata_locale_source.py  0011_alter_campaign_browser_precedence_and_more.py
apps/tracking/stubs/ipware/: __init__.pyi
apps/tracking/stubs/subadmin/: __init__.pyi
apps/tracking/stubs/tagulous/: __init__.pyi  admin.pyi  forms.pyi
apps/tracking/templates/: base.html  index.html
apps/tracking/templates/admin/: text_field_filter.html
apps/tracking/templates/admin/tracking/trackingdata/: metadata_modal.html
apps/tracking/templates/tracking/: _package_redirect.html  _package_tracking.html  _sendPayload.html  mass_text.html  redirect.html  track.html  tracking.html  tracking_data_modal.html  tracking_data_view.html
apps/tracking/templatetags/: tracking_tags.py
frontend/: README.md  entrypoint.sh  package-lock.json  package.json  vite.config.ts
frontend/delivery/: DeliveryApp.tsx  index.html  main.tsx  package-lock.json  package.json  vite.config.ts
frontend/delivery/components/: Navigation.tsx
frontend/imagereview/: ImageReviewApp.tsx  index.html  main.tsx  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/imagereview/pages/: ImageReviewPage.tsx
frontend/imagereview/services/: api.ts
frontend/management/: AgentForm.tsx  AgentList.tsx  AllTrackingList.tsx  CampaignDetail.tsx  CampaignForm.tsx  CampaignList.tsx  CompanyEdit.tsx  Dashboard.tsx  Login.tsx  ManagementApp.tsx  RecipientForm.tsx  RecipientList.tsx  RequestDataModal.tsx  Signup.tsx  TrackingDetail.tsx  TrackingForm.tsx  TrackingList.tsx  UserForm.tsx  UserList.tsx  index.html  main.tsx  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/management/components/: Breadcrumbs.tsx  Layout.tsx  Navigation.tsx  PaginationControls.tsx
frontend/management/constants/: ui.ts
frontend/management/contexts/: AuthContext.tsx
frontend/management/src/: CompanyEdit.tsx  Dashboard.tsx  Login.tsx  ManagementApp.tsx  RequestDataModal.tsx  Signup.tsx  main.tsx
frontend/management/src/campaigns/: CampaignDetail.tsx  CampaignForm.tsx  CampaignList.tsx
frontend/management/src/components/: Actions.tsx  Breadcrumbs.tsx  DataTable.tsx  Layout.tsx  Navigation.tsx  Sidebar.tsx
frontend/management/src/constants/: ui.ts
frontend/management/src/contexts/: ThemeContext.tsx
frontend/management/src/hooks/: useColumnDefs.tsx
frontend/management/src/recipients/: RecipientForm.tsx  RecipientList.tsx
frontend/management/src/services/: api.ts
frontend/management/src/tracking/: TrackingDetail.tsx  TrackingForm.tsx  TrackingList.tsx
frontend/management/src/types/: api.ts  index.ts
frontend/management/src/users/: Profile.tsx  UserDetail.tsx  UserForm.tsx  UserList.tsx
frontend/management/src/utils/: alerts.tsx  formatting.ts  listHandlers.ts  routes.ts  theme.ts  typeGuards.ts
frontend/management/types/: index.ts
frontend/management/utils/: params.ts  typeGuards.ts
frontend/shared/: index.css
frontend/shared/components/: Breadcrumbs.tsx  Navigation.tsx
frontend/shared/contexts/: AuthContext.tsx
frontend/shared/pages/: Home.tsx  InterceptPage.tsx  Redirect.tsx  Tracking.tsx  TrackingPage.tsx
frontend/shared/services/: api.ts  trackingUtils.ts
frontend/shared/types/: api.ts
frontend/src/: App.tsx
frontend/src/components/: Navigation.tsx
frontend/src/pages/: AgentForm.tsx  AgentList.tsx  CompanyEdit.tsx  Dashboard.tsx  Home.tsx  Login.tsx  Redirect.tsx  Tracking.tsx
frontend/src/services/: api.ts
