[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0,<3.0.0"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
mypy_path = ["apps", "apps/tracking/stubs"]
python_executable = ".venv/bin/python"
ignore_missing_imports = true
plugins = ["mypy_django_plugin.main"]
explicit_package_bases = true

# Ignore all type errors in migrations
[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

# Ignore all type errors in manage.py
[[tool.mypy.overrides]]
module = "manage"
ignore_errors = true

# Ignore all type errors in subadmin (if present)
[[tool.mypy.overrides]]
module = "subadmin.*"
ignore_missing_imports = true

# Ignore all type errors in Twilio (dynamic library)
[[tool.mypy.overrides]]
module = "twilio.*"
ignore_missing_imports = true

# Ignore all type errors in tagulous
[[tool.mypy.overrides]]
module = "tagulous.*"
ignore_missing_imports = true
follow_imports = "skip"

# Ignore all type errors in django-ipware
[[tool.mypy.overrides]]
module = "django_ipware.*"
ignore_missing_imports = true
follow_imports = "skip"

[tool.django-stubs]
django_settings_module = "config.settings"
strict_settings = true

[tool.black]
# indent = 4
line-length = 100
target-version = ["py312"]

[tool.isort]
known_first_party = ["apps"]
profile = "black"
skip_glob = [
    "**/*.pyi",
    "**/__pycache__/**",
    "**/.pytest_cache/**",
    "**/manage.py",
    "**/wsgi.py",
    "**/asgi.py",
    "**/celery.py",
    "**/middleware/**",
    "**/mgmt/**"
]
skip = [
    "**/stubs/**",
    "**/migrations/**",
    "**/tests/**",
    "**/venv/**",
    "**/.venv/**",
    "**/env/**",
    "**/ENV/**",
    "**/middleware/**",
    "**/mgmt/**"
]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
force_single_line = true
combine_as_imports = true
lines_after_imports = 2
lines_between_types = 1
order_by_type = false
balanced_wrapping = true
sections = [
    "FUTURE",
    "STDLIB",
    "DJANGO",
    "REST_FRAMEWORK",
    "CELERY",
    "REDIS",
    "REQUESTS",
    "TWILIO",
    "PYDANTIC",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER"
]
default_section = "THIRDPARTY"
no_lines_before = [
    "FUTURE",
    "STDLIB",
    "DJANGO",
    "REST_FRAMEWORK",
    "CELERY",
    "REDIS",
    "REQUESTS",
    "TWILIO",
    "PYDANTIC",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER"
]
known_third_party = [
    "django",
    "rest_framework",
    "celery",
    "redis",
    "requests",
    "twilio",
    "pydantic"
]
known_django = ["django"]
known_rest_framework = ["rest_framework"]
known_celery = ["celery"]
known_redis = ["redis"]
known_requests = ["requests"]
known_twilio = ["twilio"]
known_pydantic = ["pydantic"]

[tool.poetry]
name = "packageparcels"
version = "0.1.0"
description = "GPS & IP tracking website with notifications."
authors = ["Josh Martin <denverprogrammer@gmail.com>"]
package-mode = false
packages = [
    { include = "apps" },
    { include = "apps/tracking/stubs" }
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
celery = "^5.3.4"
django = "^5.0"
django-admin-interface = "^0.28.0"
django-bootstrap5 = "^25.1"
django-debug-toolbar = "^4.3.0"
django-environ = "^0.11.2"
django-extensions = "^4.1"
django-filter = "^25.1"
django-htmx = "^1.17.3"
django-ipware = "^7.0.1"
django-json-widget = "^2.0.1"
django-jsonfield = "^1.4.1"
django-jsonview = "^2.0.0"
django-stubs-ext = "^5.2.0"
django-subadmin = "^3.2.4"
django-tagulous = "^1.3.3"
djangorestframework = "^3.16.0"
gunicorn = "^21.2.0"
markdown = "^3.8"
psycopg2-binary = "^2.9.10"
pydantic = "^2.11.3"
pytz = "^2025.2"
redis = "^5.0.3"
requests = "^2.31.0"
twilio = "^9.5.2"
twilio-stubs = "^0.2.0"
types-redis = "^4.6.0.20240311"
types-requests = "^2.31.0.20240125"
uvicorn = "^0.34.0"

[tool.poetry.group.dev.dependencies]
bandit = "^1.8.3"
black = ">=23.1.0"
debugpy = "^1.8.0"
django-stubs = {extras = ["compatible-mypy"], version = "^5.2.0"}
djangorestframework-stubs = {extras = ["compatible-mypy"], version = "^3.16.0"}
flake8 = "^7.0.0"
isort = ">=5.12.0"
mypy = "^1.8.0"
pre-commit = "^4.2.0"
pre-commit-hooks = "^5.0.0"
pyright = ">=1.1.296"
pytest = ">=7.2.1"
pytest-cov = ">=3.0.0"
toml-sort = ">=0.24.2"

[tool.poetry.requires-plugins]
poetry-plugin-shell = ">=1.0.1"
poetry-plugin-sort = ">=0.3.0"
poetry-plugin-export = ">=1.9.0"

[tool.poetry.scripts]
toml-sort = 'toml_sort.cli:cli'

[tool.flake8]
max-line-length = 100
ignore = ["E203", "W503", "E501"]
extend-ignore = ["E203", "W503", "E501"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "*.pyc",
    "*.pyo",
    "*.pyd",
    ".Python",
    "env",
    "venv",
    ".venv",
    "ENV",
    "env.bak",
    "venv.bak",
    ".poetry",
    "migrations",
]
per-file-ignores = [
    "__init__.py:F401",
    "tests/*:S101",
]
max-complexity = 10
